# rero_yarp

./: .gitignore  CMakeLists.txt  README.md
app/: CMakeLists.txt
app/rero/: CMakeLists.txt
app/rero/conf/: reroRemoteInterface.ini  rero_config.ini  rero_recorder.ini
app/rero/scripts/: rero.xml  rero.xml.template
lib/client/: audio.grpc.pb.cc  audio.grpc.pb.h  audio.pb.cc  audio.pb.h  hotword.grpc.pb.cc  hotword.grpc.pb.h  hotword.pb.cc  hotword.pb.h  speech_recognition.grpc.pb.cc  speech_recognition.grpc.pb.h  speech_recognition.pb.cc  speech_recognition.pb.h
lib/client/include/: AudioClient.h  HotwordDetectionClient.h  SpeechRecognitionClient.h
modules/: CMakeLists.txt
modules/ReroAudio/: CMakeLists.txt
modules/ReroAudio/include/: ReroAudioModule.h  ReroAudioPeriodicThread.h
modules/ReroAudio/src/: ReroAudioModule.cpp  ReroAudioPeriodicThread.cpp  main.cpp
modules/ReroNLU/: CMakeLists.txt
modules/ReroNLU/include/: ReroNLUModule.h  ReroNLUThread.h
modules/ReroNLU/src/: ReroNLUModule.cpp  ReroNLUThread.cpp  main.cpp
modules/ReroSpeechRecognition/: CMakeLists.txt
modules/ReroSpeechRecognition/include/: ReroSpeechRecognitionModule.h  ReroSpeechRecognitionThread.h
modules/ReroSpeechRecognition/src/: ReroSpeechRecognitionModule.cpp  ReroSpeechRecognitionThread.cpp  main.cpp
pythonScripts/: CMakeLists.txt  requirements.txt
pythonScripts/AudioReroRecorder/: AudioReroRecorder.py  AudioReroRecorder.spec  CMakeLists.txt  requirements.txt
pythonScripts/AudioReroRecorder/rero_grpc/: audio_pb2.py
pythonScripts/rereRemoteInterface/: CMakeLists.txt  requirements.txt  reroRemoteInterface.py  reroRemoteInterface.spec
