# Copyright: (C) 2020 Reverb Robotics Inc.
# Authors: Lukas Grasse <lukas@reverbrobotics.ca>
#
# Based on source code from https://github.com/TataLab/iCubAudioAttention
# Copyright (C) 2019 Department of Neuroscience - University of Lethbridge

# CopyPolicy: Released under the terms of the GNU GPL v2.0.

cmake_minimum_required(VERSION 3.5)

add_subdirectory (rero)

